// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Deferrable > should match snapshot for DEFERRABLE INITIALLY DEFERRED 1`] = `
{
  "appendOnly": false,
  "cache": null,
  "checks": [],
  "defaultOrder": null,
  "embeddedLists": [],
  "entity": {
    "comment": null,
    "decorator": "Entity",
    "name": "DeferrableDeferred",
    "namespace": null,
  },
  "extras": [],
  "fields": [
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "id",
      "max": null,
      "min": null,
      "name": "id",
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": true,
      "scale": null,
      "schema": null,
      "transform": null,
      "type": "uuid",
    },
  ],
  "filters": [],
  "generated": [
    {
      "key": "id",
      "length": null,
      "max": null,
      "min": null,
      "strategy": "uuid",
    },
  ],
  "hooks": [],
  "indexes": [],
  "inheritance": null,
  "primaryKeys": [
    "id",
  ],
  "relationCounts": [],
  "relationIds": [],
  "relations": [
    {
      "findKeys": {
        "id": "ownerId",
      },
      "foreignConstructor": [Function],
      "foreignKey": "deferredChildren",
      "joinKeys": {
        "ownerId": "id",
      },
      "joinTable": null,
      "key": "owner",
      "options": {
        "deferrable": true,
        "initiallyDeferred": true,
        "loading": {
          "multiple": "ignore",
          "single": "ignore",
        },
        "nullable": false,
        "onDestroy": "ignore",
        "onInsert": "ignore",
        "onOrphan": "ignore",
        "onSoftDestroy": "ignore",
        "onUpdate": "ignore",
        "strategy": null,
      },
      "orderBy": null,
      "type": "ManyToOne",
    },
  ],
  "schemas": [],
  "scopeKeys": [],
  "target": [Function],
  "uniques": [],
  "versionKeys": [],
}
`;

exports[`Deferrable > should match snapshot for DEFERRABLE INITIALLY IMMEDIATE 1`] = `
{
  "appendOnly": false,
  "cache": null,
  "checks": [],
  "defaultOrder": null,
  "embeddedLists": [],
  "entity": {
    "comment": null,
    "decorator": "Entity",
    "name": "DeferrableImmediate",
    "namespace": null,
  },
  "extras": [],
  "fields": [
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "id",
      "max": null,
      "min": null,
      "name": "id",
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": true,
      "scale": null,
      "schema": null,
      "transform": null,
      "type": "uuid",
    },
  ],
  "filters": [],
  "generated": [
    {
      "key": "id",
      "length": null,
      "max": null,
      "min": null,
      "strategy": "uuid",
    },
  ],
  "hooks": [],
  "indexes": [],
  "inheritance": null,
  "primaryKeys": [
    "id",
  ],
  "relationCounts": [],
  "relationIds": [],
  "relations": [
    {
      "findKeys": {
        "id": "ownerId",
      },
      "foreignConstructor": [Function],
      "foreignKey": "immediateChildren",
      "joinKeys": {
        "ownerId": "id",
      },
      "joinTable": null,
      "key": "owner",
      "options": {
        "deferrable": true,
        "initiallyDeferred": false,
        "loading": {
          "multiple": "ignore",
          "single": "ignore",
        },
        "nullable": false,
        "onDestroy": "ignore",
        "onInsert": "ignore",
        "onOrphan": "ignore",
        "onSoftDestroy": "ignore",
        "onUpdate": "ignore",
        "strategy": null,
      },
      "orderBy": null,
      "type": "ManyToOne",
    },
  ],
  "schemas": [],
  "scopeKeys": [],
  "target": [Function],
  "uniques": [],
  "versionKeys": [],
}
`;

exports[`Deferrable should match snapshot for DEFERRABLE INITIALLY DEFERRED 1`] = `
{
  "appendOnly": false,
  "cache": null,
  "checks": [],
  "defaultOrder": null,
  "embeddedLists": [],
  "entity": {
    "comment": null,
    "decorator": "Entity",
    "name": "DeferrableDeferred",
    "namespace": null,
  },
  "extras": [],
  "fields": [
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "id",
      "max": null,
      "min": null,
      "name": "id",
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": true,
      "scale": null,
      "schema": null,
      "transform": null,
      "type": "uuid",
    },
  ],
  "filters": [],
  "generated": [
    {
      "key": "id",
      "length": null,
      "max": null,
      "min": null,
      "strategy": "uuid",
    },
  ],
  "hooks": [],
  "indexes": [],
  "inheritance": null,
  "primaryKeys": [
    "id",
  ],
  "relationCounts": [],
  "relationIds": [],
  "relations": [
    {
      "findKeys": {
        "id": "ownerId",
      },
      "foreignConstructor": [Function],
      "foreignKey": "deferredChildren",
      "joinKeys": {
        "ownerId": "id",
      },
      "joinTable": null,
      "key": "owner",
      "options": {
        "deferrable": true,
        "initiallyDeferred": true,
        "loading": {
          "multiple": "ignore",
          "single": "ignore",
        },
        "nullable": false,
        "onDestroy": "ignore",
        "onInsert": "ignore",
        "onOrphan": "ignore",
        "onSoftDestroy": "ignore",
        "onUpdate": "ignore",
        "strategy": null,
      },
      "orderBy": null,
      "type": "ManyToOne",
    },
  ],
  "schemas": [],
  "scopeKeys": [],
  "target": [Function],
  "uniques": [],
  "versionKeys": [],
}
`;

exports[`Deferrable should match snapshot for DEFERRABLE INITIALLY IMMEDIATE 1`] = `
{
  "appendOnly": false,
  "cache": null,
  "checks": [],
  "defaultOrder": null,
  "embeddedLists": [],
  "entity": {
    "comment": null,
    "decorator": "Entity",
    "name": "DeferrableImmediate",
    "namespace": null,
  },
  "extras": [],
  "fields": [
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "id",
      "max": null,
      "min": null,
      "name": "id",
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": true,
      "scale": null,
      "schema": null,
      "transform": null,
      "type": "uuid",
    },
  ],
  "filters": [],
  "generated": [
    {
      "key": "id",
      "length": null,
      "max": null,
      "min": null,
      "strategy": "uuid",
    },
  ],
  "hooks": [],
  "indexes": [],
  "inheritance": null,
  "primaryKeys": [
    "id",
  ],
  "relationCounts": [],
  "relationIds": [],
  "relations": [
    {
      "findKeys": {
        "id": "ownerId",
      },
      "foreignConstructor": [Function],
      "foreignKey": "immediateChildren",
      "joinKeys": {
        "ownerId": "id",
      },
      "joinTable": null,
      "key": "owner",
      "options": {
        "deferrable": true,
        "initiallyDeferred": false,
        "loading": {
          "multiple": "ignore",
          "single": "ignore",
        },
        "nullable": false,
        "onDestroy": "ignore",
        "onInsert": "ignore",
        "onOrphan": "ignore",
        "onSoftDestroy": "ignore",
        "onUpdate": "ignore",
        "strategy": null,
      },
      "orderBy": null,
      "type": "ManyToOne",
    },
  ],
  "schemas": [],
  "scopeKeys": [],
  "target": [Function],
  "uniques": [],
  "versionKeys": [],
}
`;
